[gd_scene load_steps=11 format=3 uid="uid://b60gd00lpyt5o"]

[ext_resource type="Script" path="res://ui/title_screen.gd" id="1_silfm"]
[ext_resource type="Texture2D" uid="uid://d1iv1c7rq1mb4" path="res://ui/title_bg.png" id="2_cft1f"]
[ext_resource type="Texture2D" uid="uid://d03wb5de7i3v2" path="res://ui/play_button_hovered.png" id="3_7afln"]
[ext_resource type="Texture2D" uid="uid://bcxiwxjf0qdhs" path="res://ui/play_button.png" id="3_pguw5"]
[ext_resource type="Texture2D" uid="uid://b55wdmab356b8" path="res://ui/play_button_pressed.png" id="5_f5w8v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8kwx1"]

[sub_resource type="Theme" id="Theme_8l3ke"]
Button/styles/focus = SubResource("StyleBoxEmpty_8kwx1")

[sub_resource type="Animation" id="Animation_giwla"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(715.5, 634)]
}

[sub_resource type="Animation" id="Animation_eese3"]
resource_name = "bob"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(715.5, 634), Vector2(715.5, 659), Vector2(715.5, 634)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cr77d"]
_data = {
"RESET": SubResource("Animation_giwla"),
"bob": SubResource("Animation_eese3")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_silfm")
button_normal = ExtResource("3_pguw5")
button_hovered = ExtResource("3_7afln")
button_pressed = ExtResource("5_f5w8v")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_cft1f")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -669.5
offset_top = 106.0
offset_right = 669.5
offset_bottom = 311.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 150
text = "Rod Rush"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -244.5
offset_top = -446.0
offset_right = 186.5
offset_bottom = -260.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_8l3ke")
text = "
"
icon = ExtResource("3_pguw5")
flat = true
icon_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayButton"]
libraries = {
"": SubResource("AnimationLibrary_cr77d")
}

[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
